--- a/SeminarskiRS2.MobileApp.UWP/SeminarskiRS2.MobileApp.UWP.csproj
+++ b/SeminarskiRS2.MobileApp.UWP/SeminarskiRS2.MobileApp.UWP.csproj
@@ -130,6 +130,9 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\creditcard.png" />
+    <Content Include="Assets\logo.png" />
+    <Content Include="Assets\success.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
