--- a/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp.csproj
+++ b/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Flurl" Version="2.8.2" />
     <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="Stripe.net" Version="37.34.0" />
     <PackageReference Include="Syncfusion.Xamarin.SfMaps" Version="18.2.0.54" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1269" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />  
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
